--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -15,7 +15,7 @@ steps:
     inputs:
       azureSubscription: ${{ parameters.backendServiceArm }}
       scriptType: FilePath
-      scriptPath: AppServicePerf/ado/getPipelineObjectId.ps1
+      scriptPath: ado/getPipelineObjectId.ps1
   - task: TerraformInstaller@0
     displayName: Install Terraform
     inputs:
