--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -39,7 +39,11 @@ steps:
     inputs:
       command: plan
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      commandOptions: '-var-file=${{ parameters.pathToTerraformDirectory }}/environments/dev.tfvars'
+      commandOptions: |
+        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/dev.tfvars 
+        -var SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)
+        -var SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)
+        -var WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
