--- a/ado/deploy.yml
+++ b/ado/deploy.yml
@@ -1,5 +1,4 @@
 parameters:
-  - name: appServiceName
   - name: artifactName
   - name: backendAzureRmContainerName
   - name: backendAzureRmKey
@@ -27,6 +26,6 @@ steps:
       pathToTerraformVariableDirectory: ${{ parameters.pathToTerraformVariableDirectory }}
   - template: deployWebApp.yml
     parameters:
-      appServiceName: ${{ parameters.appServiceName }}
+      appServiceName: $(terraformOutput.appServiceName) 
       artifactName: ${{ parameters.artifactName }}
       serviceConnectionName: ${{ parameters.serviceConnectionName }}
