--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -35,6 +35,7 @@ steps:
       backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
       backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
   - task: TerraformTaskV2@2
+    name: terraformApply
     displayName: Terraform - Apply
     inputs:
       command: apply
@@ -46,3 +47,8 @@ steps:
       backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
       backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
       environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
+  - powershell: |
+      $terraformOutput = Get-Content "$(terraformApply.jsonOutputVariablesPath)" | ConvertFrom-Json
+      $terraformOutput | Get-Member -MemberType NoteProperty | % { $o = $terraformOutput.($_.Name); Write-Host "##vso[task.setvariable variable=$($_.Name);isoutput=true;issecret=$($o.sensitive)]$($o.value)" }
+    name: terraformOutput
+    displayName: Read Terraform outputs
