--- a/ado/deployWebApp.yml
+++ b/ado/deployWebApp.yml
@@ -10,3 +10,4 @@ steps:
       azureSubscription: ${{ parameters.serviceConnectionName }}
       appName: ${{ parameters.appServiceName }}
       package: ${{ parameters.artifactName }}
+      deploymentMethod: runFromPackage
