--- a/ado/build.yml
+++ b/ado/build.yml
@@ -20,9 +20,10 @@ steps:
       projects: |
         ${{ parameters.pathToWebAppProjectDirectory }}/${{ parameters.webAppProjectName }}.csproj
   - task: DotNetCoreCLI@2
+    condition: false
     displayName: Publish
     inputs:
       command: publish
       arguments: -c ${{ parameters.configuration }}
-  - publish: ${{ parameters.pathToWebAppProjectDirectory }}/bin/${{ parameters.configuration }}/net5.0/publish
+  - publish: ${{ parameters.pathToWebAppProjectDirectory }}/bin/${{ parameters.configuration }}/net5.0
     artifact: ${{ parameters.artifactName }}
