--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -46,7 +46,6 @@ stages:
     - job: waitForValidation
       displayName: Wait for validation
       dependsOn: Dev_Deploy
-      condition: false
       pool: server
       timeoutInMinutes: 4320 # job times out in 3 days
       steps:
@@ -54,7 +53,7 @@ stages:
         timeoutInMinutes: 1440 # task times out in 1 day
         inputs:
           instructions: 'Please validate the deployment and resume'
-          onTimeout: 'resume'
+          onTimeout: reject
   - stage: Test
     dependsOn: Dev
     jobs:
@@ -89,7 +88,7 @@ stages:
         timeoutInMinutes: 1440 # task times out in 1 day
         inputs:
           instructions: 'Please validate the deployment and resume'
-          onTimeout: 'resume'
+          onTimeout: reject
   - stage: Prod
     dependsOn: Test
     jobs:
