--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -1,13 +1,14 @@
 parameters:
-  - name: environmentName
-  - name: pathToTerraformDirectory
-  - name: pathToTerraformVariableDirectory
-  - name: environmentServiceNameAzureRM
-  - name: backendServiceArm
-  - name: backendAzureRmResourceGroupName
-  - name: backendAzureRmStorageAccountName
   - name: backendAzureRmContainerName
   - name: backendAzureRmKey
+  - name: backendAzureRmResourceGroupName
+  - name: backendAzureRmStorageAccountName
+  - name: backendServiceArm
+  - name: environmentName
+  - name: environmentServiceNameAzureRM
+  - name: globalTerraformVariableFilename
+  - name: pathToTerraformDirectory
+  - name: pathToTerraformVariableDirectory
   
 steps:
   - task: TerraformInstaller@0
@@ -40,7 +41,12 @@ steps:
     inputs:
       command: apply
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      commandOptions: -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)"
+      commandOptions: |
+        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.globalTerraformVariableFilename }}.tfvars
+        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars 
+        -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" 
+        -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" 
+        -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)"
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
