--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -42,11 +42,7 @@ steps:
       command: apply
       workingDirectory: ${{ parameters.pathToTerraformDirectory }}
       commandOptions: |
-        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.globalTerraformVariableFilename }}.tfvars
-        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars 
-        -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" 
-        -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" 
-        -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)"
+        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.globalTerraformVariableFilename }}.tfvars -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)"
       backendServiceArm: ${{ parameters.backendServiceArm }}
       backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
       backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
