--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -15,6 +15,10 @@ steps:
     displayName: Install Terraform
     inputs:
       terraformVersion: 1.0.0
+  - bash: |
+      cd ${{ parameters.pathToTerraformDirectory }}
+      terraform workspace select ${{ parameters.environmentName }} 
+    displayName: Checkout Terraform workspace - ${{ parameters.environmentName }}
   - task: TerraformTaskV2@2
     displayName: Terraform - Initialize
     inputs:
