--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -1,58 +1,45 @@
 parameters:
-  - name: backendAzureRmContainerName
-  - name: backendAzureRmKey
-  - name: backendAzureRmResourceGroupName
-  - name: backendAzureRmStorageAccountName
-  - name: backendServiceArm
   - name: environmentName
-  - name: environmentServiceNameAzureRM
   - name: globalTerraformVariableFilename
   - name: pathToTerraformDirectory
-  - name: pathToTerraformVariableDirectory
+  - name: pathToTerraformEnvironmentVariablesDirectory
   
 steps:
   - task: TerraformInstaller@0
     displayName: Install Terraform
     inputs:
       terraformVersion: 1.0.0
-  - task: TerraformTaskV2@2
+  - bash: terraform init
     displayName: Terraform - Initialize
-    inputs:
-      command: init
-      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      backendServiceArm: ${{ parameters.backendServiceArm }}
-      backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
-      backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
-      backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
-      backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - bash: |
-      cd ${{ parameters.pathToTerraformDirectory }}
-      terraform workspace select ${{ parameters.environmentName }} 
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+  - bash: terraform workspace select ${{ parameters.environmentName }} 
     displayName: Checkout Terraform workspace - ${{ parameters.environmentName }}
-  - task: TerraformTaskV2@2
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+  - bash: terraform validate 
     displayName: Terraform - Validate
-    inputs:
-      command: validate
-      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      backendServiceArm: ${{ parameters.backendServiceArm }}
-      backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
-      backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
-      backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
-      backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-  - task: TerraformTaskV2@2
-    name: terraformApply
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+  - bash: |
+      terraform plan \
+      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
+      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
+      -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
+      -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
+      -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
+      -input=false \
+      -out tfplan
+    displayName: Terraform - Plan
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+  - bash: |
+      terraform apply \
+      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
+      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
+      -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
+      -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
+      -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
+      -input=false \
+      tfplan
     displayName: Terraform - Apply
-    inputs:
-      command: apply
-      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-      commandOptions: |
-        -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.globalTerraformVariableFilename }}.tfvars -var-file=${{ parameters.pathToTerraformDirectory }}/environments/${{ parameters.environmentName }}.tfvars -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)"
-      backendServiceArm: ${{ parameters.backendServiceArm }}
-      backendAzureRmResourceGroupName: ${{ parameters.backendAzureRmResourceGroupName }}
-      backendAzureRmStorageAccountName: ${{ parameters.backendAzureRmStorageAccountName }}
-      backendAzureRmContainerName: ${{ parameters.backendAzureRmContainerName }}
-      backendAzureRmKey: ${{ parameters.backendAzureRmKey }}
-      environmentServiceNameAzureRM: ${{ parameters.environmentServiceNameAzureRM }}
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
   - powershell: |
       $terraformOutput = Get-Content "$(terraformApply.jsonOutputVariablesPath)" | ConvertFrom-Json
       $terraformOutput | Get-Member -MemberType NoteProperty | % { $o = $terraformOutput.($_.Name); Write-Host "##vso[task.setvariable variable=$($_.Name);isoutput=true;issecret=$($o.sensitive)]$($o.value)" }
