--- a/ado/deploy.yml
+++ b/ado/deploy.yml
@@ -17,6 +17,7 @@ steps:
       globalTerraformVariableFilename: ${{ parameters.globalTerraformVariableFilename }}
       pathToTerraformDirectory: ${{ parameters.pathToTerraformDirectory }}
       pathToTerraformEnvironmentVariablesDirectory: ${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}
+      serviceConnectionName: ${{ parameters.serviceConnectionName }}
   - template: deployWebApp.yml
     parameters:
       appServiceName: $(terraformOutput.appServiceName) 
