--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -3,43 +3,74 @@ parameters:
   - name: globalTerraformVariableFilename
   - name: pathToTerraformDirectory
   - name: pathToTerraformEnvironmentVariablesDirectory
+  - name: serviceConnectionName
   
 steps:
   - task: TerraformInstaller@0
     displayName: Install Terraform
     inputs:
       terraformVersion: 1.0.0
-  - bash: terraform init
+  - task: AzureCLI@2
     displayName: Terraform - Initialize
-    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-  - bash: terraform workspace select ${{ parameters.environmentName }} 
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnectionName }}
+      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        terraform init
+  - task: AzureCLI@2
+    displayName: Terraform - Switch Workspace
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnectionName }}
+      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        terraform workspace select ${{ parameters.environmentName }} 
     displayName: Checkout Terraform workspace - ${{ parameters.environmentName }}
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-  - bash: terraform validate 
-    displayName: Terraform - Validate
-    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-  - bash: |
-      terraform plan \
-      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
-      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
-      -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
-      -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
-      -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
-      -input=false \
-      -out tfplan
-    displayName: Terraform - Plan
-    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
-  - bash: |
-      terraform apply \
-      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
-      -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
-      -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
-      -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
-      -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
-      -input=false \
-      tfplan
-    displayName: Terraform - Apply
-    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+  - task: AzureCLI@2
+    displayName: Terraform - Validate 
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnectionName }}
+      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        terraform validate 
+  - task: AzureCLI@2
+    displayName: Terraform - Plan 
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnectionName }}
+      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        terraform plan \
+        -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
+        -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
+        -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
+        -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
+        -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
+        -input=false \
+        -out tfplan
+  - task: AzureCLI@2
+    displayName: Terraform - Apply 
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnectionName }}
+      workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: 
+        terraform apply \
+        -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
+        -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.environmentName }}.tfvars \
+        -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
+        -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
+        -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
+        -input=false \
+        tfplan
   - powershell: |
       $terraformOutput = Get-Content "$(terraformApply.jsonOutputVariablesPath)" | ConvertFrom-Json
       $terraformOutput | Get-Member -MemberType NoteProperty | % { $o = $terraformOutput.($_.Name); Write-Host "##vso[task.setvariable variable=$($_.Name);isoutput=true;issecret=$($o.sensitive)]$($o.value)" }
