--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -37,7 +37,10 @@ stages:
         vmImage: ubuntu-latest
       environment: ${{ variables.devEnvironmentName }}
       variables:
+        ARM_SUBSCRIPTION_ID: ${{ variables.subscriptionId }}
+        ARM_TENANT_ID: ${{ variables.tenantId }}
         group: ${{ variables.webAppSolutionName }}-${{ variables.devEnvironmentName }}
+        group: ${{ variables.webAppSolutionName }}-KeyVault-${{ variables.devEnvironmentName }}
       strategy:
         runOnce:
           deploy:
