--- a/ado/env/global.yml
+++ b/ado/env/global.yml
@@ -6,11 +6,13 @@ variables:
   backendAzureRmStorageAccountName: terraformaiarjb
   configuration: Debug
   globalTerraformVariableFilename: global
+  serviceConnectionName: jordanbean-aia
+  subscriptionId: dcf66641-6312-4ee1-b296-723bb0a999ba
+  tenantId: 72f988bf-86f1-41af-91ab-2d7cd011db47
   terraformDirectoryName: terraform 
   terraformEnvironmentVariablesDirectoryName: environments
-  terraformPreDirectoryName: pre
   terraformInitDirectoryName: init
+  terraformPreDirectoryName: pre
   terraformWebAppDirectoryName: webApp
-  serviceConnectionName: jordanbean-aia
   webAppProjectName: AppServicePerf
   webAppSolutionName: AppServicePerf
