--- a/ado/azure-pipeline.yml
+++ b/ado/azure-pipeline.yml
@@ -37,12 +37,16 @@ stages:
         vmImage: ubuntu-latest
       environment: ${{ variables.devEnvironmentName }}
       variables:
+        - group: ${{ variables.webAppSolutionName }}-${{ variables.devEnvironmentName }}
+        - group: ${{ variables.webAppSolutionName }}-KeyVault-${{ variables.devEnvironmentName }}
+        - name: ARM_CLIENT_ID
+          value: $(ArmClientId)
+        - name: ARM_CLIENT_SECRET
+          value: $(ArmClientSecret)
         - name: ARM_SUBSCRIPTION_ID
           value: ${{ variables.subscriptionId }}
         - name: ARM_TENANT_ID
           value: ${{ variables.tenantId }}
-        - group: ${{ variables.webAppSolutionName }}-${{ variables.devEnvironmentName }}
-        - group: ${{ variables.webAppSolutionName }}-KeyVault-${{ variables.devEnvironmentName }}
       strategy:
         runOnce:
           deploy:
