--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -12,12 +12,21 @@ steps:
   - bash: terraform init
     displayName: Terraform - Initialize
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - bash: terraform workspace select ${{ parameters.environmentName }} 
     displayName: Checkout Terraform workspace - ${{ parameters.environmentName }}
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - bash: terraform validate 
     displayName: Terraform - Validate
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - bash: |
       terraform plan \
       -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
@@ -29,6 +38,9 @@ steps:
       -out tfplan
     displayName: Terraform - Plan
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - bash: |
       terraform apply \
       -var-file=${{ parameters.pathToTerraformEnvironmentVariablesDirectory }}/${{ parameters.globalTerraformVariableFilename }}.tfvars \
@@ -40,6 +52,9 @@ steps:
       tfplan
     displayName: Terraform - Apply
     workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - powershell: |
       $terraformOutput = Get-Content "$(terraformApply.jsonOutputVariablesPath)" | ConvertFrom-Json
       $terraformOutput | Get-Member -MemberType NoteProperty | % { $o = $terraformOutput.($_.Name); Write-Host "##vso[task.setvariable variable=$($_.Name);isoutput=true;issecret=$($o.sensitive)]$($o.value)" }
