--- a/ado/env/global.yml
+++ b/ado/env/global.yml
@@ -10,7 +10,7 @@ variables:
   subscriptionId: dcf66641-6312-4ee1-b296-723bb0a999ba
   tenantId: 72f988bf-86f1-41af-91ab-2d7cd011db47
   terraformDirectoryName: terraform 
-  terraformEnvironmentVariablesDirectoryName: environments
+  terraformEnvironmentVariablesDirectoryName: env
   terraformInitDirectoryName: init
   terraformPreDirectoryName: pre
   terraformWebAppDirectoryName: webApp
