--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -50,8 +50,16 @@ steps:
     env:
       ARM_CLIENT_ID: $(ArmClientId)
       ARM_CLIENT_SECRET: $(ArmClientSecret)
+  - bash: |
+      terraform output -json ./terraformApplyOutput.json
+    displayName: Terraform - Output
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
+    env:
+      ARM_CLIENT_ID: $(ArmClientId)
+      ARM_CLIENT_SECRET: $(ArmClientSecret)
   - powershell: |
-      $terraformOutput = Get-Content "$(terraformApply.jsonOutputVariablesPath)" | ConvertFrom-Json
+      $terraformOutput = Get-Content ./terraformApplyOutput.json | ConvertFrom-Json
       $terraformOutput | Get-Member -MemberType NoteProperty | % { $o = $terraformOutput.($_.Name); Write-Host "##vso[task.setvariable variable=$($_.Name);isoutput=true;issecret=$($o.sensitive)]$($o.value)" }
     name: terraformOutput
     displayName: Read Terraform outputs
+    workingDirectory: ${{ parameters.pathToTerraformDirectory }}
