--- a/ado/env/dev.yml
+++ b/ado/env/dev.yml
@@ -1,2 +1,4 @@
 variables:
   devEnvironmentName: dev
+  devKeyVaultName: kvappServicePerfUSSCDEV
+  devResourceGroupName: rg-appServicePerf-USSC-DEV
