--- a/ado/env/test.yml
+++ b/ado/env/test.yml
@@ -1,2 +1,4 @@
 variables:
   testEnvironmentName: test
+  testKeyVaultName: kvappServicePerfussctest
+  testResourceGroupName: rg-appServicePerf-ussc-test
