--- a/AppServicePerf/AppServicePerf/appsettings.json
+++ b/AppServicePerf/AppServicePerf/appsettings.json
@@ -17,9 +17,13 @@
   "AllowedHosts": "*",
   "CacheCredentials": "",
   "ConnectionStrings": {
-    "AppServicePerfContext": "",
-    "RedisCache":  ""
+    "AppServicePerfManagedIdentityContext": "",
+    "AppServicePerfSqlPasswordContext": "",
+    "RedisCache": "",
+    "StorageAccount": ""
   },
+  "FeatureFlagStorage": "",
+  "FeatureFlagSql":  "",
   "Storage": {
     "ServiceUri": ""
   },
