--- a/ado/deployTerraform.yml
+++ b/ado/deployTerraform.yml
@@ -34,6 +34,8 @@ steps:
       -var "SQLSERVERADMINUSERNAME=$(TF_VAR_SQLSERVERADMINUSERNAME)" \
       -var "SQLSERVERADMINPASSWORD=$(TF_VAR_SQLSERVERADMINPASSWORD)" \
       -var "WEBAPPCLIENTSECRET=$(TF_VAR_WEBAPPCLIENTSECRET)" \
+      -var "APPSERVICESUBNETNAME"=$(TF_VAR_APPSERVICESUBNETNAME)" \
+      -var "VNETNAME"=$(TF_VAR_VNETNAME)" \
       -input=false \
       -out tfplan
     displayName: Terraform - Plan
