--- a/ado/env/dev.yml
+++ b/ado/env/dev.yml
@@ -2,3 +2,5 @@ variables:
   devEnvironmentName: dev
   devKeyVaultName: kvappServicePerfUSSCDEV
   devResourceGroupName: rg-appServicePerf-USSC-DEV
+  devAppServiceSubnetName: appServiceSubnet
+  devvNetName: vnet-appServicePerf-USSC-DEV
