--- a/ado/env/central.yml
+++ b/ado/env/central.yml
@@ -6,3 +6,4 @@ variables:
   centralImageName: crappserviceperfussccentral.azurecr.io/crappserviceperfussccentral/linux:ubuntu-16.04
   centralvNetName: vnet-appServicePerf-USSC-central
   centralAdoAgentSubnetName: adoAgentSubnet
+  centralLocation: southcentralus
